# RustLLM_serve

./: Cargo.toml  LICENSE  README.md  sorted_keys.txt
examples/: benchmark_cache.rs
src/: app_state.rs  config.rs  lib.rs  main.rs  model.rs  models.rs
src/api/: handlers.rs  mod.rs  models.rs  server.rs
src/layers/: activation.rs  causal_self_attention.rs  decoder.rs  embedding.rs  layer.rs  linear.rs  lm_head.rs  mlp.rs  mod.rs  rms_norm.rs
src/llm/: activation.rs  causal_self_attention.rs  decoder.rs  embedding.rs  inference.rs  linear.rs  lm_head.rs  mlp.rs  mod.rs  models.rs  rms_norm.rs
