[package]
name = "RustLLM_serve"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = "0.9.2"
candle-nn = "0.9.2"
#candle-core = { version = "0.9.2", features = ["cuda"] }
#candle-nn = { version = "0.9.2", features = ["cuda"] }


hf-hub = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.149"
tokenizers = "0.22.2"
