[package]
name = "RustLLM_serve"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = "0.9.2"
candle-nn = "0.9.2"
#candle-core = { version = "0.9.2", features = ["cuda"] }
#candle-nn = { version = "0.9.2", features = ["cuda"] }


hf-hub = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.149"
tokenizers = "0.22.2"

# Server HTTP
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9.2"
